--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
-    "next-themes": "^0.4.6",
+    "neverthrow": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.8",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
