--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,9 @@ iroh-blobs = { version = "0.34.0", features = ["net_protocol", "rpc"] }
 iroh = "0.34.0"
 quic-rpc = "0.19.0"
 tauri-plugin-clipboard-manager = "2"
+file_icon_provider = "0.4.0"
+image = "0.25.6"
+base64 = "0.22.1"
 
 [dev-dependencies]
 duct = "0.13.6"
