Add tauri-plugin-log setup
The commit adds logging functionality using tauri-plugin-log to enable better debugging and error tracking. It includes configuration of log targets and replaces print statements with proper logging levels.

Key changes:

1. Add tauri-plugin-log dependency
2. Configure log plugin with webview targets
3. Replace println! with proper log levels (debug/info/warn/error)
4. Add logging utilities and helper macro
5. Update error handling to log errors before returning
6. Clean up console.log calls in frontend code

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,8 @@ tauri-plugin-clipboard-manager = "2"
 file_icon_provider = "0.4.0"
 image = "0.25.6"
 base64 = "0.22.1"
+tauri-plugin-log = "2"
+log = "0.4.27"
 
 [dev-dependencies]
 duct = "0.13.6"
