--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "send-it"
 version = "0.2.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Sandesh Pandey"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
