--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-router": "^1.114.17",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
@@ -30,7 +31,8 @@
     "react-dom": "^19.1.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -40,11 +42,8 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "3",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
