--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.1.4",
+    "tauri-plugin-windows-version-api": "^2.0.0",
     "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
