--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "neverthrow": "^8.2.0",
+    "posthog-js": "^1.236.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.1",
