--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,10 @@ edition = "2021"
 name = "tauri_send_me_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+[profile.release]
+codegen-units = 1
+lto = true
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
@@ -29,6 +33,7 @@ tauri-plugin-opener = "2"
 serde_json = "1"
 tauri-plugin-dialog = "2"
 iroh-blobs = { version = "0.34.0", features = ["net_protocol", "rpc"] }
+iroh-gossip = { version = "0.34.0", features = ["rpc"] }
 iroh = "0.34.0"
 quic-rpc = "0.19.0"
 tauri-plugin-clipboard-manager = "2"
