Remove unused SVG files and update dependencies

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,3 +44,5 @@ tauri-plugin-log = "2"
 log = "0.4.27"
 window-vibrancy = "0.6.0"
 tauri-plugin-windows-version = "2.0.0"
+rand = "0.9.1"
+anyhow = "1.0.98"
