Replace base64 crate with data-encoding for image serialization

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,10 +39,10 @@ quic-rpc = "0.19.0"
 tauri-plugin-clipboard-manager = "2"
 file_icon_provider = "0.4.0"
 image = "0.25.6"
-base64 = "0.22.1"
 tauri-plugin-log = "2"
 log = "0.4.27"
 window-vibrancy = "0.6.0"
 tauri-plugin-windows-version = "2.0.0"
 rand = "0.9.1"
 anyhow = "1.0.98"
+data-encoding = "2.9.0"
